# Foduu-Studio-Theme-Converter

./: .gitignore  documentation.md  main.py  modellist.txt  pyproject.toml  requirements.txt  sample.env  sample_README.md  sample_config.json  sample_page.mustache
app/: __main__.py  main.py
app/static/: app.js  style.css
app/templates/: index.html
prompt/: config_prompt.md  readme_metadata.md  seperation.md  shortcode-creation.md
src/: analyze_html.py  convert_shortcode.py  create_config.py  create_default.py  create_mustache.py  for_readme.py  helper.py  logger.py  main.py  progress.py  save_shortcode.py  schema.py  separate_div.py  track_expense.py
